fixed visibility issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,9 +43,7 @@ body {
   margin-top: 0.5rem;
   margin-left: 0.5rem;
   display: flex;
-  
   font-family: "Noto Sans", sans-serif;
-  padding-bottom: 1rem;
   border-bottom: 2px solid;
   border-color: rgb(39, 43, 66);
   .navOption {
@@ -72,6 +70,16 @@ body {
       position: absolute;
       z-index: 1;
       }
+      .bgtext::after {
+      content: "";
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent transparent black;
+}
       .badgob:hover .bgtext {
         visibility: visible;
       }
